--- a/www/p5-WWW-Search/Makefile
+++ b/www/p5-WWW-Search/Makefile
@@ -1,13 +1,13 @@
 # New ports collection makefile for:    p5-WWW-Search
-# Version required:			1.015
+# Version required:			1.017
 # Date created:				June 26th 1997
 # Whom:	      				James FitzGibbon <jfitz@FreeBSD.ORG>
 #
-# $Id: Makefile,v 1.2 1997/09/14 04:00:06 jfitz Exp $
+# $Id: Makefile,v 1.3 1998/04/26 07:32:20 vanilla Exp $
 #
 
-DISTNAME=	WWW-Search-1.015
-PKGNAME=	p5-WWW-Search-1.015
+DISTNAME=	WWW-Search-1.017
+PKGNAME=	p5-WWW-Search-1.017
 CATEGORIES=	www perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN}
 MASTER_SITE_SUBDIR=	WWW
@@ -21,13 +21,19 @@ USE_PERL5=	YES
 MAN1PREFIX=	${PREFIX}
 MAN1=		AutoSearch.1 WebSearch.1
 MAN3PREFIX=	${PREFIX}/lib/perl5
-MAN3=		WWW::Search.3 WWW::Search::AltaVista.3 WWW::Search::AltaVista::AdvancedNews.3 \
-		WWW::Search::AltaVista::AdvancedWeb.3 WWW::Search::AltaVista::News.3 \
-		WWW::Search::AltaVista::Web.3 WWW::Search::Dejanews.3 WWW::Search::Excite.3 \
-		WWW::Search::HotBot.3 WWW::Search::Infoseek.3 WWW::Search::Infoseek::Email.3 \
-		WWW::Search::Infoseek::News.3 WWW::Search::Infoseek::Web.3 WWW::Search::Lycos.3 \
-		WWW::Search::Magellan.3 WWW::Search::PLweb.3 WWW::Search::SFgate.3 \
-		WWW::Search::WebCrawler.3 WWW::Search::Yahoo.3 WWW::SearchResult.3
+MAN3=		WWW::Search.3 WWW::Search::AltaVista.3 \
+		WWW::Search::AltaVista::AdvancedNews.3 \
+		WWW::Search::AltaVista::AdvancedWeb.3 \
+		WWW::Search::AltaVista::News.3 WWW::Search::AltaVista::Web.3 \
+		WWW::Search::Dejanews.3 WWW::Search::Excite.3 \
+		WWW::Search::HotBot.3 WWW::Search::Infoseek.3 \
+		WWW::Search::Infoseek::Email.3 WWW::Search::Infoseek::News.3 \
+		WWW::Search::Infoseek::Web.3 WWW::Search::Lycos.3 \
+		WWW::Search::Magellan.3 WWW::Search::PLweb.3 \
+		WWW::Search::SFgate.3 WWW::Search::WebCrawler.3 \
+		WWW::Search::Yahoo.3 WWW::SearchResult.3 \
+		WWW::Search::Infoseek::Companies.3 WWW::Search::Verity.3 \
+		WWW::Search::Gopher.3 WWW::Search::Simple.3
 
 do-configure:
 		@cd ${WRKSRC}; ${SETENV} ${CONFIGURE_ENV} ${PREFIX}/bin/perl Makefile.PL
