--- a/print/gp/Makefile
+++ b/print/gp/Makefile
@@ -3,12 +3,12 @@
 # Date created:		15 April 1997
 # Whom:			Kiriyama Kazuhiko<kiri@kiri.toba-cmt.ac.jp>
 #
-# $Id: Makefile,v 1.4 1998/02/21 22:37:57 fenner Exp $
+# $Id: Makefile,v 1.5 1998/04/18 12:54:18 itojun Exp $
 #
 
 DISTNAME=	GP-2.5
 PKGNAME?=	gp-2.5
-CATEGORIES=	print tk42
+CATEGORIES+=	print tk42
 MASTER_SITES=	http://www.kamome.or.jp/hueda/GP/ \
 		ftp://www.neosoft.com/pub/tcl/sorted/print/GP-2.5/
 
