--- a/editors/xemacs20/Makefile
+++ b/editors/xemacs20/Makefile
@@ -3,7 +3,7 @@
 # Date created:		26 August 1997
 # Whom:			Michael Elbel (me)
 #
-# $Id: Makefile,v 1.14 1998/05/04 20:23:24 jseger Exp $
+# $Id: Makefile,v 1.15 1998/06/03 19:29:58 gj Exp $
 #
 
 DISTNAME=	xemacs-20.4
@@ -73,7 +73,7 @@ post-install:
 	chmod 755 ${PREFIX}/share/emacs/site-lisp
 	${RM} -f ${PREFIX}/bin/send-pr
 # install xemacs.sh into ${PREFIX}/etc/rc.d
-	@if [ ! -d ${PREFIX}/etc/rc.d ] then; mkdir -p ${PREFIX}/etc/rc.d; fi
+	@if [ ! -d ${PREFIX}/etc/rc.d ]; then mkdir -p ${PREFIX}/etc/rc.d; fi
 	${INSTALL_SCRIPT} ${FILESDIR}/xemacs.sh ${PREFIX}/etc/rc.d
 
 .include <bsd.port.mk>
