--- a/x11-wm/lwm/Makefile
+++ b/x11-wm/lwm/Makefile
@@ -1,13 +1,13 @@
 # New ports collection makefile for:	lwm
-# Version required:	0.04
+# Version required:	0.05
 # Date created:		17 March 1998
 # Whom:			J Han <hjh@best.com>
 #
-# $Id$
+# $Id: Makefile,v 1.1.1.1 1998/03/28 15:14:43 steve Exp $
 #
 
 DISTNAME=	lwm
-PKGNAME=	lwm-0.04
+PKGNAME=	lwm-0.05
 CATEGORIES=	x11
 MASTER_SITES=	http://users.ch.genedata.com/~enh/
 EXTRACT_SUFX=	.tar.Z
