--- a/ftp/ftpfind/Makefile
+++ b/ftp/ftpfind/Makefile
@@ -1,12 +1,12 @@
 # New ports collection makefile for:	ftpfind
-# Version required:	0.92
+# Version required:	0.99
 # Date created:		Feb 21 1998
 # Whom:			Tomokazu ISHII <wub@green.an.egg.or.jp>
 #
-# $Id$
+# $Id: Makefile,v 1.1.1.1 1998/03/16 22:30:18 jseger Exp $
 #
 
-DISTNAME=	ftpfind-0.92
+DISTNAME=	ftpfind-0.99
 CATEGORIES=	net
 MASTER_SITES=	http://www1.odn.ne.jp/ishii/techniques/programs/ftpfind/
 
