--- a/x11-toolkits/xbae/Makefile
+++ b/x11-toolkits/xbae/Makefile
@@ -3,15 +3,16 @@
 # Date created:		11 December 96
 # Whom:			Lars Koeller <Lars_Koeller@odie.physik2.uni-rostock.de>
 # With some
-# modifications from:	Andreas Klemm <andreas@FreeBSD.org>
+# modifications from:	Andreas Klemm <andreas@FreeBSD.ORG>
 #
-# $FreeBSD$
+# $Id: Makefile,v 1.6 1998/11/14 09:43:33 asami Exp $
 #
 
-DISTNAME=	Xbae-4.6.2
-PKGNAME=	xbae-4.6.2
+DISTNAME=	Xbae-4.7
+PKGNAME=	xbae-4.7
 CATEGORIES=	x11-toolkits math
-MASTER_SITES=	${MASTER_SITE_XCONTRIB}
+MASTER_SITES=	ftp://sunsite.doc.ic.ac.uk/packages/X11/contrib/widgets/ \
+		${MASTER_SITE_XCONTRIB}
 MASTER_SITE_SUBDIR=	widgets/motif
 
 MAINTAINER=	Lars.Koeller@Uni-Bielefeld.de
