--- a/devel/cdecl/Makefile
+++ b/devel/cdecl/Makefile
@@ -4,7 +4,7 @@
 # Date created:			  Sat Sep 04, 1999
 # Whom:				  David O'Brien (obrien@NUXI.com)
 #
-# $Id: Makefile,v 1.2 1997/01/25 18:08:40 obrien Exp $
+# $FreeBSD$
 #
 
 DISTNAME=	cdecl-2.5
